--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-dash==2.5.1
-numpy==1.22.4
-opencv_python==4.4.0.46
-pandas==2.0.0
-Pillow==10.0.0
-plotly==5.8.2
-torch==1.10.0
+dash
+numpy
+opencv_python
+pandas
+Pillow
+plotly
+torch
 parse
